--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,11 @@
 {
   "presets": [
-    ["@babel/preset-env", {
-      "targets": {
-        "node": "current"
-      }
-    }],
-    ["@babel/preset-react", {
-      "runtime": "automatic"
-    }]
-  ]
+    "@babel/preset-env",
+    ["@babel/preset-react", { "runtime": "automatic" }]
+  ],
+  "env": {
+    "test": {
+      "plugins": ["istanbul"]
+    }
+  }
 }
