--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "karma start",
-    "test:once": "karma start --single-run",
-    "test:watch": "karma start --auto-watch"
+    "test": "cross-env NODE_ENV=test karma start",
+    "test:once": "cross-env NODE_ENV=test karma start --single-run",
+    "test:watch": "cross-env NODE_ENV=test karma start --auto-watch",
+    "test:report": "cross-env NODE_ENV=test karma start --single-run && npm run open:report",
+    "open:report": "start test-reports/html/test-report/index.html",
+    "open:coverage": "start test-reports/coverage/html/index.html"
   },
   "eslintConfig": {
     "extends": [
@@ -44,14 +47,20 @@
     "@babel/preset-env": "^7.28.3",
     "@babel/preset-react": "^7.27.1",
     "babel-loader": "^10.0.0",
+    "babel-plugin-istanbul": "^7.0.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
     "jasmine-core": "^5.11.0",
     "karma": "^6.4.4",
     "karma-chrome-launcher": "^3.2.0",
     "karma-coverage": "^2.2.1",
+    "karma-html-reporter": "^0.2.7",
     "karma-jasmine": "^5.1.0",
+    "karma-junit-reporter": "^2.0.1",
     "karma-sourcemap-loader": "^0.4.0",
+    "karma-spec-reporter": "^0.0.36",
     "karma-webpack": "^5.0.1",
-    "style-loader": "^4.0.0"
+    "style-loader": "^4.0.0",
+    "webpack": "^5.97.1"
   }
 }
