--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+/backend/node_modules/
 /.pnp
 .pnp.js
 
@@ -22,3 +23,25 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+*.log
+
+# Variables de entorno
+.env
+/backend/.env
+
+# Wallet Oracle (IMPORTANTE - no subir credenciales)
+wallet/*.sso
+wallet/*.p12
+wallet/*.pem
+wallet/keystore.jks
+
+# Sistema operativo
+.DS_Store
+Thumbs.db
+
+# IDEs
+.vscode/
+.idea/
+
+# Build
+dist/
