feat: Ajustes en el backend y base de datos para manejo de productos y descripciones
- Ajustado el método getProductos en productosController.js:
  - Configurado outFormat: oracledb.OBJECT para devolver resultados como objetos.
  - Eliminado el procesamiento de CLOB ya que descripcion ahora es VARCHAR2(500).
  - Mapeo de resultados para devolver datos limpios y estructurados.

- Ajustado el método getProductoPorCodigo en productosController.js:
  - Eliminado el procesamiento de CLOB para el campo descripcion.
  - Manejo de errores mejorado para productos no encontrados.

- Ajustado el método getProductosPorCategoria en productosController.js:
  - Mapeo de resultados para devolver datos limpios y estructurados.

- Modificada la base de datos:
  - Cambiado el tipo de la columna descripcion en la tabla productos de CLOB a VARCHAR2(500).
  - Script SQL para crear una columna temporal, copiar datos y eliminar la columna original.

- Verificado que los endpoints /api/productos y /api/productos/:codigo devuelvan datos correctos:
  - /api/productos devuelve una lista de productos con descripciones.
  - /api/productos/:codigo devuelve un producto específico con todos sus detalles.

- Mejoras generales:
  - Limpieza de código y manejo de errores en productosController.js.
  - Validación de datos en la base de datos para evitar inconsistencias.

--- a/backend/.env
+++ b/backend/.env
@@ -6,8 +6,8 @@ DB_CONNECT_STRING=tallerbasedatos2_high
 # Wallet Path
 TNS_ADMIN=C:\Users\jeremy.parada\Desktop\Level-UP\wallet
 
-# Ruta al Oracle Instant Client (versión correcta 23.9)
-ORACLE_CLIENT_LIB=C:\\oracle\\instantclient_23_9
+# Oracle Instant Client
+ORACLE_CLIENT_LIB=${ORACLE_CLIENT_LIB}
 
 # Server
 PORT=3001
