--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test:db": "node test-connection.js"
+    "test:db": "node test-connection.js",
+    "postinstall": "node ./scripts/configure-instant-client.js"
   },
   "keywords": ["gaming", "ecommerce", "oracle"],
   "author": "Jeremy Parada & Felipe Duarte",
