--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.8",
-    "react-bootstrap": "^2.10.5",
     "react": "^19.2.0",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -64,5 +64,6 @@
     "karma-webpack": "^5.0.1",
     "style-loader": "^4.0.0",
     "webpack": "^5.97.1"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
