--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.20.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "extract-zip": "^2.0.1"
   }
 }
