Variables de entorno para servidor EC2

--- a/backend/.env
+++ b/backend/.env
@@ -4,7 +4,7 @@ DB_PASSWORD=Tallerbasedatos2
 DB_CONNECT_STRING=tallerbasedatos2_high
 
 # Wallet Path
-TNS_ADMIN=C:\Users\jeremy.parada\Desktop\Level-UP\wallet
+TNS_ADMIN=/home/ubuntu/Level-UP/wallet
 
 # Oracle Instant Client
 ORACLE_CLIENT_LIB=${ORACLE_CLIENT_LIB}
