--- a/backend/.env
+++ b/backend/.env
@@ -4,10 +4,10 @@ DB_PASSWORD=Tallerbasedatos2
 DB_CONNECT_STRING=tallerbasedatos2_high
 
 # Wallet Path
-TNS_ADMIN=/home/ubuntu/Level-UP/wallet
+TNS_ADMIN=C:\Users\jeremy.parada\Desktop\Level-UP\wallet
 
 # Oracle Instant Client
-ORACLE_CLIENT_LIB=/home/ubuntu/Level-UP/instantclient_linux
+ORACLE_CLIENT_LIB=C:\Users\jeremy.parada\Desktop\Level-UP\instantclient_windows
 
 # Server
-PORT=3001
+PORT=8080
