cambios de ip backend

--- a/.env
+++ b/.env
@@ -1,5 +1,1 @@
-<<<<<<< HEAD
-REACT_APP_API_URL=http://54.89.227.49:3001/api
-=======
-REACT_APP_API_URL=http://localhost:8080/api
->>>>>>> e66794167bb093ee8d72e908f9e05b7dd29304a7
+REACT_APP_API_URL=http://level-up-web.duckdns.org/api
