--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -26,7 +26,7 @@ spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 # =================================================
 # Ruta a la carpeta del wallet. ¡Asegúrate de que la ruta sea correcta!
 # Spring Boot reemplazará las barras invertidas correctamente.
-spring.oracle.wallet.location=C:/Users/jeremy.parada/Desktop/Level-UP/wallet
+spring.oracle.wallet.location=/home/ubuntu/Level-UP/wallet
 
 # Propiedades del sistema para el driver JDBC
 oracle.net.tns_admin=${spring.oracle.wallet.location}
