--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -67,8 +67,8 @@ spring.jpa.open-in-view=false
 server.port=8080
 
 # Springdoc (Swagger) Configuration
-springdoc.api-docs.path=/api-docs
+springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.url=/v3/api-docs
 springdoc.swagger-ui.operations-sorter=alpha
 springdoc.swagger-ui.tags-sorter=alpha
-springdoc.writer.api-docs.path=./swagger
